# dendritic-calculus

./: .jekyll-metadata  Cargo.toml  Gemfile  README.md  index.md
_includes/: head.html  head_custom.html
_site/: Cargo.toml  index.html  live.html  live.js
_site/assets/css/: style.css  style.css.map
_site/img/: bf_state.gv  build.sh  division.gv  normal_form.gv  sample_dendrons.gv
_site/pkg/: dentritic_calculus.d.ts  dentritic_calculus.js  dentritic_calculus_bg.js  dentritic_calculus_bg.wasm  dentritic_calculus_bg.wasm.d.ts  package.json
_site/sample_programs/: decimal_digits.dc  natural_exp.dc  nodigits_hello_world.dc  truth_machine.dc
_site/src/: dc_grammar.pest  dendrons.rs  interpreter.rs  lib.rs  main.rs  parsing.rs
assets/css/: style.scss
img/: bf_state.gv  bounded.gv  normal_form.gv  sample_dendrons.gv
sample_programs/: add_one.dc  fizzbuzz_single.dc  make_hello_world.py  print_decimal.dc  test_div.dc  triang.dc
src/: dc_grammar.pest  dendrons.rs  interpreter.rs  lib.rs  main.rs  parsing.rs
