[package]
name = "dentritic_calculus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
memoize = "0.4.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
pest = "2.7.12"
pest_derive = "2.7.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "den"
path = "src/main.rs"